tests/good/basic/in0.spl
int main()
{
    int n = 10;
    int a = 1, b = 1;
    for (i = 0 to n)
    {
        printInt(a);
        int temp = a + b;
        a = b;
        b = temp;
    }

    return 0;
}
