tests/bad/basic/for1.spl
int main()
{
    for (i = 0 to false)
        printInt(i);
    return 0;
}
